<resources>
    <string name="app_name">WeatherAppAndroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_city_name">Search by city name</string>
    <string name="country">Country:</string>
    <string name="city_name">City:</string>
    <string name="current_weather">Current Weather:</string>
    <string name="current_temp">Current Temp:</string>
    <string name="clouds_coverage">Clouds Coverage:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="min_temp">Min Temp:</string>
    <string name="max_temp">Max Temp:</string>
    <string name="image_desc">Image Desc</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location">Location:</string>
    <string name="home">Home</string>
    <string name="currentL">Location</string>
</resources>