<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CurrentWeatherFragment">

    <ImageView
        android:id="@+id/imv_weather"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/image_desc"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_corners"
        android:layout_marginHorizontal="10dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp" />

    <TextView
        android:id="@+id/tv_currentWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_weather"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_currentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_cloudCoverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clouds_coverage"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_windSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

</LinearLayout>