<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.WeatherDetailFragment">

    <ImageView
        android:id="@+id/imv_weather"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/image_desc"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_corners"
        android:layout_marginHorizontal="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/imv_flag"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/image_desc"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_currentWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_weather"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_currentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_cloudCoverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clouds_coverage"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_windSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/tv_maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="10dp"/>

</LinearLayout>