<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

</LinearLayout>